--- a/style.css
+++ b/style.css
@@ -31,6 +31,28 @@ header {
 
 .task {
     background-color: #000;
+    width: 100vw;
+    display: flex;
+}
+
+.task label {
+    width: 25vw;
+}
+
+.config-button {
+    background-color: inherit;
+    font-size: 1em;
+    width: fit-content;
+    height: fit-content;
+}
+
+.config-button::before {
+    content: "[C]";
+}
+
+.config-button:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 #entry-task-area {
@@ -62,10 +84,11 @@ header {
     display: none;
 }
 
-#tasks-area input[type="checkbox"] + label::before {
+#tasks-area input[type="checkbox"] + span::before {
     content: "[ ] ";
 }
 
-#tasks-area input[type="checkbox"]:checked + label::before,  #tasks-area input[type="checkbox"]:hover + label::before{
+#tasks-area input[type="checkbox"]:checked + span::before,  #tasks-area input[type="checkbox"]:hover + span::before{
     content: "[X] ";
+    cursor: pointer;
 }
