Added responsiveness for mobile devices

--- a/src/styles/mainStyle.css
+++ b/src/styles/mainStyle.css
@@ -56,7 +56,7 @@ body > * {
     }
 }
 
-@media (max-width: 426px) {
+@media (max-width: 426px), (orientation: portrait)) {
     body {
         width: 90vw;
     }
