--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="main-content">
+﻿@model IEnumerable<Application.Models.ToDoTask>
+
+<div class="main-content">
         <header>
             <h1 id="title">Meu Dia</h1>
             <p id="currentDate"></p>
@@ -6,25 +8,28 @@
         
         <main>
     
-            <div class="card">
-                <input type="checkbox" name="" id="task1" class="card-checkbox">
-                <label for="task1" class="card-label">Olá mundo</label>
-                <button class="card-remove-task" onclick="alert('Olá');"></button>
-            </div>
+@foreach (var item in Model) {
+    <div class="card">
 
-            <div class="card">
-                <input type="checkbox" name="" id="task2" class="card-checkbox">
-                <label for="task2" class="card-label">Tchau mundo</label>
-                <button class="card-remove-task" onclick="alert('Olá');"></button>
-            </div>
-            
+        @{var taskId = "task" + item.Id.ToString();}
+        @{var checkboxState = item.IsActive ? "checked" : "";}
+
+        <a asp-action="Edit" asp-route-id=@item.Id class="anchor-area"></a>
+        
+        <input type="checkbox" id=@taskId class="card-checkbox" @checkboxState>
+        <label for=@taskId class="card-label">@item.Title</label>
+        <a class="card-remove-task" asp-action="Delete" asp-route-id=@item.Id></a>
+        
+    </div>
+}
+
         </main>
     </div>
 
     <footer>
 
-        <form method="get" id="task-bar">
-            <input type="text" id="task-bar-input" name="taskName" autocomplete="off">
+        <form method="post" id="task-bar" asp-action="Index">
+            <input type="text" id="task-bar-input" name="title" autocomplete="off">
             <label for="task-bar-input">Escreva uma Tarefa</label>
             <button id="task-bar-button"></button>
         </form>
