--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Todo_Site
-@using Todo_Site.Models
+﻿@using Application
+@using Application.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
