--- a/wwwroot/css/mainStyle.css
+++ b/wwwroot/css/mainStyle.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --custom-width: 40vw;
+}
+
 /* Responsável pela estilização do layout do site */
 
 * {
@@ -16,7 +20,7 @@ body {
     flex-flow: column wrap;
     justify-content: space-between;
     min-height: 100vh;
-    width: 40vw;
+    width: var(--custom-width);
     background-color: #0A0A0A;
 }
 
@@ -24,6 +28,11 @@ body > * {
     padding: 15px;
     height: fit-content;
     justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    font-size: 0.85em;
 }
 
 .main-content {
@@ -53,8 +62,8 @@ body > * {
 /* Responsividade */
 
 @media (orientation: portrait) {
-    body {
-        width: 90vw;
+    :root {
+        --custom-width: 90vw;
     }
 }
 
