--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     @RenderBody()
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/mainContent.js" asp-append-version="true"></script>
     <script src="~/js/footer.js"></script>
     <script src="~/js/header.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
